--- a/application/views/scripts/user/signin.phtml
+++ b/application/views/scripts/user/signin.phtml
@@ -18,8 +18,8 @@
 	} else {
 		echo "<table><tr><td>";
 			echo "Welcome, " . $this->user() . "<br />";
-			echo "<a href=".$this->signoutURL.">Logout</a>";
-		echo '</td><td width="' . GRAVATAR_SIZE . '">';
+			echo '<a href="'.$this->signoutURL.'">Logout</a>';
+		echo '</td><td class="gravatar">';
 			echo $this->gravatarHelper();
 		echo "</td></tr></table>";		
 	}
