--- a/public/css/mytabcloud.css
+++ b/public/css/mytabcloud.css
@@ -36,4 +36,8 @@ body { background-color:#6c4b2e; }
 
 .add_line { text-align:right; width:100%; }
 
+.button .left_button { height:35px; width:16px; background-image: url('/mytabcloud/public/images/button_01.png'); background-position: 0 0; float: left; }
+.button .center_button { height:35px; width:100px; background-image: url('/mytabcloud/public/images/button_02.png'); background-position: 0 0; }
+.button .right_button { height:35px; width:61px; background-image: url('/mytabcloud/public/images/button_03.png'); background-position: 0 0; float: right; }
+
 .updownimg { vertical-align:middle;}
