--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -10,6 +10,7 @@
         <?php $this->headLink()->appendStylesheet($this->baseUrl() . '/css/blueprint/print.css', 'print') ?>
         <?php $this->headLink()->appendStylesheet($this->baseUrl() . '/css/smoothness/jquery-ui-1.8.11.custom.css') ?>
         <?php $this->headLink()->appendStylesheet($this->baseUrl() . '/css/mytabcloud.css') ?>
+		<?php $this->headLink()->appendStylesheet($this->baseUrl() . '/css/css3buttons.css') ?>
         <?php $this->headLink()->appendStylesheet('http://fonts.googleapis.com/css?family=Arvo:regular,bold') ?>
         <?php echo $this->headLink(); ?>
         <!--[if lte IE 8]>
