--- a/application/views/scripts/user/signin.phtml
+++ b/application/views/scripts/user/signin.phtml
@@ -10,6 +10,7 @@
 		<input type="text" placeholder="Your login" name="login" id="login" value="" />
 		<input type="password" placeholder="Your password" name="password" id="password" value="" />
 		<a href="javascript:$('#signin').submit();" class="button"><span class="user icon"></span>Log in</a>
+		</form>
 		<br />
 		<?php				
 		echo "<a href=".$this->signupURL.">New user ? Sign up !</a>";
