--- a/application/views/scripts/user/profile.phtml
+++ b/application/views/scripts/user/profile.phtml
@@ -24,9 +24,9 @@
 	</div>
 	<div class="span-5 last">
 		<?php if ($this->selfProfile) { ?>
-		<a href="#" class="button"><span class="icon pen"></span>Edit my profile</a>
+		<a href="<?php echo $this->url(array('controller' => 'user', 'action' => 'edit'), 'default', true); ?>" class="button"><span class="icon pen"></span>Edit my profile</a>
 		<?php } else { ?>
-		<a href="#" class="button"><span class="icon user"></span>Add to friends</a>
+		<a href="<?php echo $this->url(array('controller' => 'user', 'action' => 'friendship', 'friend' => $this->user->getId()), 'default', true); ?>" class="button"><span class="icon user"></span>Add to friends</a>
 		<?php } ?>
 	</div>
 </div>
