Generic Profile Display

--- a/application/views/scripts/user/profile.phtml
+++ b/application/views/scripts/user/profile.phtml
@@ -1,24 +1,16 @@
 <div class="container">
 	<div class="span-18 colborder">
 		<div class="profile_container">
-			<div class="profile_image"><?php echo $this->gravatarHelper(GRAVATAR_SIZE_PROFILE, $this->user->getMail()); ?></div>
+			<div class="profile_image"><?php echo $this->gravatarHelper(GRAVATAR_SIZE_PROFILE, $this->usermail); ?></div>
 			<div class="profile_content">
-				<h2><?php echo $this->user->getName(); ?></h2>
+				<h2><?php echo $this->username; ?></h2>
+				<?php foreach($this->userArray as $key => $value) { ?>
 				<div class="profile_line last">
-					<div class="profile_line_title">Login :</div>
-					<div class="profile_line_value"><?php echo $this->user->getLogin(); ?></div>
+					<div class="profile_line_title"><?php echo $key; ?></div>
+					<div class="profile_line_value"><?php echo $value; ?></div>
 					<div class="profile_clear"></div>
 				</div>
-				<div class="profile_line last">
-					<div class="profile_line_title">E-Mail :</div>
-					<div class="profile_line_value"><?php echo $this->user->getMail(); ?></div>
-					<div class="profile_clear"></div>
-				</div>
-				<div class="profile_line last">
-					<div class="profile_line_title">Inscription date :</div>
-					<div class="profile_line_value"><?php echo $this->user->getCreated(); ?></div>
-					<div class="profile_clear"></div>
-				</div>
+				<?php } ?>
 			</div>
 		</div>
 	</div>
@@ -26,7 +18,7 @@
 		<?php if ($this->selfProfile) { ?>
 		<a href="<?php echo $this->url(array('controller' => 'user', 'action' => 'edit'), 'default', true); ?>" class="button"><span class="icon pen"></span>Edit my profile</a>
 		<?php } else { ?>
-		<?php switch(MyTabCloud_Friendship::friendshipRequested($this->asker, $this->user->getId())) {
+		<?php switch(MyTabCloud_Friendship::friendshipRequested($this->useridHelper(), $this->user->getId())) {
 				case MyTabCloud_Friendship::NO_FRIENDSHIP:
 					echo '<a href="' . $this->url(array('controller' => 'user', 'action' => 'friendship', 'friend' => $this->user->getId()), 'default', true) . '" class="button"><span class="icon user"></span>Add to friends</a>';
 					break;
@@ -34,7 +26,10 @@
 					echo '<a href="#" class="button"><span class="icon user"></span>Friend request pending</a>';
 					break;
 				case MyTabCloud_Friendship::FRIENDSHIP:
-					echo "friends";
+					echo '<a href="#" class="button"><span class="icon user"></span>You\'re friends</a>';
+					break;
+				case MyTabCloud_Friendship::FRIENDSHIP_REQUESTED:
+					echo '<a href="#" class="button"><span class="icon user"></span>He wants to be friends</a>';
 					break;
 				}
 		?>
