Visibility Login Button

--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -73,7 +73,7 @@
 		</div>
        
        	<script type="text/javascript">
-       		$("input[placeholder]").placeHeld();
+       		//$("input[placeholder]").placeHeld();
        	</script> 
        
     </body>
