--- a/application/views/scripts/user/signin.phtml
+++ b/application/views/scripts/user/signin.phtml
@@ -5,11 +5,12 @@
 		echo $this->loginMessage;
 		//echo $this->form;
 		?>
-		<form id="signin" enctype="application/x-www-form-urlencoded" method="post" action="/mytabcloud/public/"><dl class="zend_form">
+		<form id="signin" enctype="application/x-www-form-urlencoded" method="post" action="/mytabcloud/public/">
 		<input type="hidden" name="formname" value="signin" id="formname" />
 		<input type="text" placeholder="Your login" name="login" id="login" value="" />
 		<input type="password" placeholder="Your password" name="password" id="password" value="" />
 		<a href="javascript:$('#signin').submit();" class="button"><span class="user icon"></span>Log in</a>
+		<input type="submit" value="submit" name="submit" class="hidden">
 		</form>
 		<br />
 		<?php				
