--- a/application/views/scripts/user/profile.phtml
+++ b/application/views/scripts/user/profile.phtml
@@ -22,7 +22,7 @@
 			// On vérifie le statut de l'amitié entre l'utilisateur connecté et l'utilisateur dont on affiche le profil 
 			switch(MyTabCloud_Friendship::friendshipRequested($this->useridHelper(), $this->userid)) {
 				case MyTabCloud_Friendship::NO_FRIENDSHIP:
-					echo '<a href="' . $this->url(array('controller' => 'user', 'action' => 'friendship', 'friend' => $this->userid), 'default', true) . '" class="button"><span class="icon user"></span>Add to friends</a>';
+					echo '<a href="' . $this->url(array('controller' => 'user', 'action' => 'askfriendship', 'friend' => $this->userid), 'default', true) . '" class="button"><span class="icon user"></span>Add to friends</a>';
 					break;
 				case MyTabCloud_Friendship::PENDING_REQUEST:
 					echo '<a href="#" class="button"><span class="icon user"></span>Friend request pending</a>';
