--- a/application/views/scripts/tab/edit.phtml
+++ b/application/views/scripts/tab/edit.phtml
@@ -1,4 +1,11 @@
 <?php
+
+$visibilities = array(
+	MyTabCloud_Constants::VISIBILITY_PUBLIC => 'Public',
+	MyTabCloud_Constants::VISIBILITY_FRIENDS => 'Friends',
+	MyTabCloud_Constants::VISIBILITY_PRIVATE => 'Private'
+);
+
 if($this->has_tab) {
 ?>	
 
@@ -16,8 +23,9 @@ if($this->has_tab) {
            <area shape='rect' coords='0,0,20,10' href="javascript:fctUp('#capo', 25);" />                        
         </map>
         
-        <form id="createtab" enctype="application/x-www-form-urlencoded" method="post" action="<?php echo $this->url(array('controller' => 'tab', 'action' => 'edit', 'id' => $this->params['id']), 'default', true); ?>">
+        <form id="edittab" enctype="application/x-www-form-urlencoded" method="post" action="<?php echo $this->url(array('controller' => 'tab', 'action' => 'edit', 'id' => $this->params['id']), 'default', true); ?>">
         <div class="container">
+			<?php echo $this->formHidden('formname', $this->form_name, null); ?>
             <div id="tab_pane" class="span-18">
             	<ul>
             		<li><a href="#tab-song">Song Information</a></li>
@@ -51,10 +59,7 @@ if($this->has_tab) {
 							</td>
 							<td><?php echo $this->formLabel('visibility', 'Visibility', array('class' => 'required')); ?></td>
 							<td>
-								<select name="visibility" id="visibility">
-									<option value="public" <?php if($this->params['visibility'] == 'public') echo 'selected="true"'; ?>>Public</option>
-									<option value="private" <?php if($this->params['visibility'] == 'private') echo 'selected="true"'; ?>>Private</option>
-								</select>
+								<?php echo $this->formSelect('visibility', $this->params['visibility'], null, $visibilities); ?>
 							</td>
 						</tr>
 						<tr>
