--- a/application/views/scripts/user/signin.phtml
+++ b/application/views/scripts/user/signin.phtml
@@ -9,7 +9,7 @@
 		<input type="hidden" name="formname" value="signin" id="formname" />
 		<input type="text" placeholder="Your login" name="login" id="login" value="" />
 		<input type="password" placeholder="Your password" name="password" id="password" value="" />
-		<a href="javascript:$('#signin').submit();" class="button"><span class="user icon"></span>Log in</a>
+		<a href="#" id="signin_button" class="button"><span class="user icon"></span>Log in</a>
 		<input type="submit" value="submit" name="submit" class="hidden">
 		</form>
 		<br />
