--- a/application/views/scripts/user/signin.phtml
+++ b/application/views/scripts/user/signin.phtml
@@ -9,10 +9,8 @@
 		<input type="hidden" name="formname" value="signin" id="formname" />
 		<input type="text" placeholder="Your login" name="login" id="login" value="" />
 		<input type="password" placeholder="Your password" name="password" id="password" value="" />
-		<a href="#" id="signin_button" class="button"><span class="user icon"></span>Log in</a>
-		<input type="submit" value="submit" name="submit" class="hidden">
+		<input type="submit" value="Log in" name="submit">
 		</form>
-		<br />
 		<?php				
 		echo "<a href=".$this->signupURL.">New user ? Sign up !</a>";
 	// Sinon on affiche son nom et le lien pour se déconnecter
